--- a/client/user/src/components/operationArea/operation.css
+++ b/client/user/src/components/operationArea/operation.css
@@ -1,6 +1,6 @@
 
 /* Button styles */
-.button {
+.buttonSubmit {
   padding: 10px 30px;
   margin-bottom: 20px;
   border: 3px solid transparent;
@@ -9,7 +9,7 @@
   font-size: var(--button-text-size);
 }
 
-.button:hover {
+.buttonSubmit:hover {
   border: 3px solid lightskyblue;
 }
 
@@ -60,7 +60,7 @@
 }
 
 .textfield {
-  margin-top: 20px;
+  margin-top: 0px;
   width: clamp(100px, 300px, 500px);
   height: 30px;
   font-size: 18px;
