--- a/client/user/src/FileUploader/FileUploader.css
+++ b/client/user/src/FileUploader/FileUploader.css
@@ -1,9 +1,14 @@
 
 .upload-button {
     padding: 4px;
-    background-color: #000;
+    background-color: #999;
     color: #fff;
     cursor: pointer;
     border-radius: 10px;
     font-weight: bold;
+    border: 1px solid transparent;
+}
+
+.upload-button:hover {
+    border: 1px solid lightblue;
 }
