--- a/client/user/src/components/operationArea/operation.css
+++ b/client/user/src/components/operationArea/operation.css
@@ -62,6 +62,29 @@
 .textfield {
   margin-top: 0px;
   width: clamp(100px, 300px, 500px);
+
   height: 30px;
   font-size: 18px;
+}
+
+.textFieldHelp:before{
+  content: attr(data-hover);
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+
+  background-color: black;
+  color: #fff;
+  
+  border-radius: 5px;
+  padding: 5px 5px;
+  transition: opacity 1s ease-in-out;
+}
+.textFieldHelp:hover:before {
+  opacity: 1;
+  visibility: visible;
+}
+.textFieldWrap{
+  display: inline-block
 }
