--- a/client/user/src/FileUploader/FileUploader.css
+++ b/client/user/src/FileUploader/FileUploader.css
@@ -1,4 +1,4 @@
-
+/* 
 .upload-button {
     padding: 4px;
     background-color: #999;
@@ -10,5 +10,5 @@
 }
 
 .upload-button:hover {
-    border: 1px solid lightblue;
-}
+    border: 1px solid rgb(191, 226, 163);
+} */
