Added a navbar component but doesnt work for now

--- a/client/user/src/components/operationArea/operation.css
+++ b/client/user/src/components/operationArea/operation.css
@@ -91,7 +91,9 @@
 }
 
 .textFieldWrap{
-  display: inline-block
+  width: 100%;
+  display:flex;
+  justify-content: space-between;
 }
 .pearsonCheckWrap{
   width: 100%;
