--- a/client/user/src/components/header/header.css
+++ b/client/user/src/components/header/header.css
@@ -3,7 +3,7 @@
     background: var(--primary-gradient);
     padding: 40px 0px;
     display: flex;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     justify-content: center;
 }
 
