--- a/client/user/src/index.css
+++ b/client/user/src/index.css
@@ -10,9 +10,9 @@
   --primary-font: 'Inter', sans-serif;
   --title-size: 50px;
   --button-text-size: 20px;
-  --primary-gradient: linear-gradient(90deg, rgba(33,75,4,1) 0%, rgba(91,121,9,1) 35%);
+  --primary-gradient: linear-gradient(90deg, rgb(90, 162, 201) 0%, rgb(67, 121, 197) 35%);
   --form-gradient: linear-gradient(90deg, rgba(243, 243, 249, 1) 0%, rgba(251, 245, 245, 1) 100%);
-  --primary-background: rgba(91, 121, 9, 1);
-  --secondary-background: rgba(51, 128, 48, 1);
+  --primary-background: rgb(67, 121, 197);
+  --secondary-background: rgb(67, 121, 197);
   --shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
